--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="outline">
 			<div id="title">
-				<h3>Bonneville digital web3</h3>
+				<h3>Bonneville digital web change 4</h3>
 			</div>
 			<div id="caption">
 				<h1>Create and publish your own website quickly and easily using iWeb, Pages, and many other applications available<br />
