--- a/map2.html
+++ b/map2.html
@@ -18,9 +18,15 @@
 <script src="https://js.arcgis.com/3.15compact/"></script>
 <script>
   var map;
-  require(["esri/map", "dojo/domReady!"], function(Map){
-
+  require([
+  "esri/map",
+  "esri/arcgis/utils",
+  "dojo/domReady!"
+  ], function(Map, arcgisUtils){
+		arcgisUtils.createMap(22fc21ffc7bc4f418d8e71be3e097873, "mapDiv").then(function (response) {
+     	 map = response.map;
   });
+});
 </script>
 </head>
 
