--- a/map2.html
+++ b/map2.html
@@ -23,7 +23,7 @@
   "esri/arcgis/utils",
   "dojo/domReady!"
   ], function(Map, arcgisUtils){
-		arcgisUtils.createMap(22fc21ffc7bc4f418d8e71be3e097873, "mapDiv").then(function (response) {
+		arcgisUtils.createMap("22fc21ffc7bc4f418d8e71be3e097873", "mapDiv").then(function (response) {
      	 map = response.map;
   });
 });
