--- a/map2.html
+++ b/map2.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Create a Web Map</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<link rel="stylesheet" type="text/css" href="https://js.arcgis.com/3.15/esri/css/esri.css">
-<style>
-  html,body,#mapDiv,.map.container{
-    padding:0;
-    margin:0;
-    height:100%;
-  }
-</style>
-
-<script>var dojoConfig = { parseOnLoad:true };</script>
-<script src="https://js.arcgis.com/3.15compact/"></script>
-<script>
-  var map;
-  require([
-  "esri/map",
-  "esri/arcgis/utils",
-  "dojo/domReady!"
-  ], function(Map, arcgisUtils){
-		arcgisUtils.createMap("22fc21ffc7bc4f418d8e71be3e097873", "mapDiv").then(function (response) {
-     	 map = response.map;
-  });
-});
-</script>
-</head>
-
-<body>
- <div>This is an ArcGIS map test</div>
-  <div id="mapDiv"></div>
-</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>ArcGIS Javascript API Test1</title>
+	<link rel="stylesheet" href="https://js.arcgis.com/3.15/esri/css/esri.css">
+	<script src="https://js.arcgis.com/3.15/"></script>	
+	<script>
+  		var map;
+		require(["esri/map", "dojo/domReady!"], function(Map) {
+  		map = new Map("mapDiv", {
+	    center: [-56.049, 38.485],
+	    zoom: 3,
+	    basemap: "streets"
+	  });
+	});
+	</script>
+	<style>
+	  html, body, #mapDiv {
+	    padding: 0;
+	    margin: 0;
+	    height: 100%;
+	  }
+	</style>
+  </head>
+  <body class="claro">
+    <div>Test2</div>
+  	<div id="mapDiv"></div>
+  </body>
 </html>
