--- a/recapiclient.html
+++ b/recapiclient.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>RecApiClient Test</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="" alt="My test image">
+    <h1>My main title</h1>
+    <h2>My top level heading</h2>
+    <h3>My subheading</h3>
+    <h4>My sub-subheading</h4>
+    <img src="images/img04.jpg" alt="RecApiClient Test">
+    <p>My cat is very grumpy</p>
+    <p><button>Change user</button></p>
+    <script src="scripts/main.js"></script>
+  
   </body>
 </html>
